Solve some overflow issues

--- a/src/components/Dashboard/Job/job.css
+++ b/src/components/Dashboard/Job/job.css
@@ -23,6 +23,7 @@
 @media only screen and (max-width: 767px) {
   .job {
     width: 100%;
+    overflow: hidden;
   }
 
   .assign-lead {
