--- a/src/components/Dashboard/Sidebar/sidebar.css
+++ b/src/components/Dashboard/Sidebar/sidebar.css
@@ -75,7 +75,7 @@
 @media only screen and (max-width: 767px) {
   .sidebar {
     width: 100%;
-    height: 12vh;
+    height: 13vh;
   }
 
   .sidebar-info {
@@ -122,15 +122,16 @@
   }
 
   .sidemenu-mob {
+    border: 1px solid pink;
+    position: fixed;
+    right: 12px;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     flex-direction: column;
     height: 50vh;
-    width: 90vw;
-    margin-left: 10px;
+    width: 50vw;
     justify-content: space-around;
     background: #fff;
-    z-index: -7;
   }
 
   .sidemenu-option {
